--- a/day-2-data-types/index-day-2.html
+++ b/day-2-data-types/index-day-2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>30 DAYS JS</title>
+    <title>DAY 2 - JS</title>
   </head>
   <body>
     <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
@@ -12,6 +12,6 @@
       console.log("Welcome");
     </script>
 
-    <script src="intro.js"></script>
+    <script src="intro-day-2.js"></script>
   </body>
 </html>
